# CommercialScraper

./: .dockerignore  .gitignore  Docker-compose.yml  Dockerfile  LICENSE  README.md  requirements.txt  setup-LAPTOP-8TSECTHK.py  setup.cfg  setup.py
CommercialScraper/: data_processing.py  data_save.py  pipeline.py
Pipeline/: airbnb_scraper.py
Scraper/: __init__.py  __main__.py  airbnb_scraper-LAPTOP-8TSECTHK.py  airbnb_scraper.py  data_save.py  deleteme.py  products_sample.csv  proxy.py  sample.csv  scraper_demo.py  test.json  test.py  test_airbnb_scraper.py
Scraper/data/alphanumeric/: products_sample.csv
test/: test_units.py
tests/: test_airbnb_scraper.py
