[metadata]
name = AirbnbScraper
version = 0.0.1
author = Omar 4ldrich Tahmas
author_email = o.ismail@aol.co.uk
description = A dynamic and scalable data pipeline from Airbnbs commercial site to your local system / cloud storage.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/BlairMar/Airbnb-webscraping-project
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = Scraper
packages = find:
python_requires = >=3.6

[options.packages.find]
where = Scraper